--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Github Project</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>This is on GitHub! Woo!</h1>
-    
+    <h1 class="title">This is on GitHub! Woo!</h1>
+    <a href="www.google.com">Google | Alphabet Soup</a>
+    <div class="image">
+        <img src="img/puppy.jpg" alt="Cute yellow lab puppy laying on a deck.">
+    </div>
 </body>
 </html>
