--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1 class="title">This is on GitHub! Woo!</h1>
     <a href="www.google.com">Google | Alphabet Soup</a>
-    <div class="image">
-        <img src="img/puppy.jpg" alt="Cute yellow lab puppy laying on a deck.">
+    <div class="img">
+        <img class="puppy" src="img/puppy.jpg" alt="Cute yellow lab puppy laying on a deck.">
     </div>
 </body>
-</html>
+</html> 
