added 'google_link' class and added styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="title">This is on GitHub! Woo!</h1>
-    <a href="www.google.com">Google | Alphabet Soup</a>
+    <a class="google_link" href="www.google.com">Google | Alphabet Soup</a>
     <div class="img">
         <img class="puppy" src="img/puppy.jpg" alt="Cute yellow lab puppy laying on a deck.">
     </div>
