added ul of fav pizza toppings

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <div class="img">
         <img class="puppy" src="img/puppy.jpg" alt="Cute yellow lab puppy laying on a deck.">
     </div>
+
+    <div class="topping-list">
+        <ol>Top 5 Favorite Pizza Toppings
+            <li>Pepperoni</li>
+            <li>Cheese</li>
+            <li>Bacon</li>
+            <li>Olives</li>
+            <li>More cheese</li>
+        </ol>
+    </div>
 </body>
 </html> 
