added new section with 2 p elements and styling

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
             <li>More cheese</li>
         </ol>
     </div>
+
+    <section class="explanation">
+        <p>This is a test website to help me learn about GIT!</p>
+        <p>I'm having a great time with it, and I can't wait to learn more!</p>
+    </section>
 </body>
 </html> 
